syntax = "proto3";

package chxy.proto.common;

option java_multiple_files = true;
option java_package = "proto.common";

import "command.proto";

// Collect performance raw data from browser.
service ReportService {

  // report once per page
  rpc uploadReport (ReportData) returns (Commands) {
  }

  // report one or more error logs for pages, could report multiple times.
  rpc uploadStreamReport (stream ReportData) returns (Commands) {
  }
}

enum ReportType {
  Normal = 0;
  Error = 1;
}

message ReportData {
  ReportType reportType = 1;
  repeated KeyStringValuePair detail = 2;
}